--- a/index.html
+++ b/index.html
@@ -1,9 +1,20 @@
-<!DOCTYPE html>
 <html>
-<body>
-
-<h2>The Button Element</h2>
-<button type="button" onclick="alert('Hello world!')">Click Me!</button>
- 
-</body>
+	<link href="style.css" rel="stylesheet">
+    <head>
+        <h1>Hello World!</h1>
+    </head>
+    <body>
+		<script src="script.js"></script>
+		<button type = "button">Click Me!</button>
+		<br><br>
+        <p>
+            Lorem ipsum dolor sit amet, consectetur adipiscing elit. Vestibulum lacus enim, accumsan ut eros eget, pulvinar lacinia elit. Pellentesque quis convallis turpis. Vestibulum non nulla nisi. Aenean tellus nisi, mattis quis dolor vitae, mollis hendrerit lorem. Nulla velit neque, dictum et sollicitudin ut, commodo a libero. Suspendisse rutrum facilisis sapien, ut ullamcorper urna. Ut eget fringilla neque, vitae posuere magna. Sed varius pharetra blandit. Mauris dictum ex in tortor porttitor, aliquam vestibulum risus pulvinar. 
+        </p>
+        <p>
+            Integer ut lacus ac leo blandit viverra eleifend in nibh. Curabitur sollicitudin fermentum risus, a varius mauris tristique ut. Nulla non convallis enim. Aenean ante velit, suscipit non orci ullamcorper, mattis pretium dolor. Suspendisse potenti. Suspendisse ac lectus sed quam interdum rhoncus. Aliquam rutrum justo id sapien pulvinar ultricies. 
+        </p>
+        <p>
+            Praesent eu pellentesque mauris. Maecenas suscipit gravida mauris sed fringilla. Donec velit mi, imperdiet eget lacus sed, vehicula sollicitudin ante. Fusce fermentum molestie mollis. Cras velit eros, ultrices ac fermentum sed, rutrum non enim. Praesent accumsan, nulla id aliquet tempor, dolor turpis mollis orci, et ultricies libero ligula ac felis. Aenean fermentum diam sed diam luctus, eget tempus mi posuere. Suspendisse et libero sit amet mauris commodo commodo. Morbi nisl dui, condimentum nec ultricies sed, convallis quis lacus. Phasellus sollicitudin auctor ligula, non rhoncus ante dignissim quis. Praesent eget ipsum dolor. Nulla hendrerit nulla quis suscipit egestas. Mauris gravida purus ac quam placerat malesuada. Vestibulum magna felis, fringilla at tincidunt id, tristique quis lacus. Duis turpis nunc, pellentesque sed mi id, egestas tincidunt urna. Mauris posuere auctor tellus, eget ornare metus molestie sit amet. 
+        </p>
+    </body>
 </html>
