testing with python script

--- a/index.html
+++ b/index.html
@@ -4,7 +4,8 @@
         <h1>Hello World!</h1>
     </head>
     <body>
-		<script src="script.js"></script>
+        <!--<script src="script.js"></script>-->
+        <script src="pyscript.py"></script>
 		<button type = "button">Click Me!</button>
 		<br><br>
         <p>
