--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     </head>
     <body>
         <script src="script.js"></script>
-		<button type = "button" onclick="randomIntegers(0, 100)">Click Me!</button>
+		<button type = "button" onclick="alert("hello")">Click Me!</button>
 		<br><br>
         <p>
             Lorem ipsum dolor sit amet, consectetur adipiscing elit. Vestibulum lacus enim, accumsan ut eros eget, pulvinar lacinia elit. Pellentesque quis convallis turpis. Vestibulum non nulla nisi. Aenean tellus nisi, mattis quis dolor vitae, mollis hendrerit lorem. Nulla velit neque, dictum et sollicitudin ut, commodo a libero. Suspendisse rutrum facilisis sapien, ut ullamcorper urna. Ut eget fringilla neque, vitae posuere magna. Sed varius pharetra blandit. Mauris dictum ex in tortor porttitor, aliquam vestibulum risus pulvinar. 
